Move CodeAnalysis to own build slice and fix duplicate and missing references

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,4 +8,5 @@
   <Import Project="build/targets/reproducible/Reproducible.props" />
   <Import Project="build/targets/versioning/Versioning.props" />
   <Import Project="build/targets/tests/Tests.props" />
+  <Import Project="build/targets/codeanalysis/CodeAnalysis.props" />
 </Project>
