--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,16 +4,13 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <Import Project="build/targets/reproducible/Packages.props" />
+  <Import Project="build/targets/codeanalysis/Packages.props" />
   <ItemGroup>
     <PackageVersion Include="GetPackFromProject" Version="1.0.6" />
-    <PackageVersion Include="Meziantou.Analyzer" Version="2.0.155" />
-    <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.3" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.6.1" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageVersion Include="Moq" Version="4.8.2" />
     <PackageVersion Include="Nerdbank.GitVersioning" Version="3.6.133" />
-    <PackageVersion Include="Roslynator.Analyzers" Version="2.1.0" />
-    <PackageVersion Include="StyleCop.Analyzers" Version="1.1.118" />
     <PackageVersion Include="Verify.Nupkg" Version="1.1.5" />
     <PackageVersion Include="Verify.Xunit" Version="24.2.0" />
     <PackageVersion Include="xunit" Version="2.8.1" />
