--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -4,4 +4,5 @@
   <Import Project="build/targets/reproducible/Reproducible.targets" />
   <Import Project="build/targets/versioning/Versioning.targets" />
   <Import Project="build/targets/tests/Tests.targets" />
+  <Import Project="build/targets/codeanalysis/CodeAnalysis.targets" />
 </Project>
