--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,16 +4,12 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <Import Project="build/targets/reproducible/Packages.props" />
+  <Import Project="build/targets/tests/Packages.props" />
   <Import Project="build/targets/codeanalysis/Packages.props" />
   <ItemGroup>
     <PackageVersion Include="GetPackFromProject" Version="1.0.6" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.6.1" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageVersion Include="Moq" Version="4.8.2" />
     <PackageVersion Include="Nerdbank.GitVersioning" Version="3.6.133" />
-    <PackageVersion Include="Verify.Nupkg" Version="1.1.5" />
-    <PackageVersion Include="Verify.Xunit" Version="24.2.0" />
-    <PackageVersion Include="xunit" Version="2.8.1" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1" />
   </ItemGroup>
 </Project>
