Fix insufficent nuget.config patterns

--- a/nuget.config
+++ b/nuget.config
@@ -11,8 +11,21 @@
       <package pattern="*" />
     </packageSource>
     <packageSource key="dotnet-tools">
-      <package pattern="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" />
-      <package pattern="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing" />
+      <package pattern="Microsoft.CodeAnalysis.Analyzer.Testing*" />
+      <package pattern="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing*" />
+      <package pattern="Microsoft.CodeAnalysis.VisualBasic.Analyzer.Testing*" />
+
+      <package pattern="Microsoft.CodeAnalysis.CodeFix.Testing*" />
+      <package pattern="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing*" />
+      <package pattern="Microsoft.CodeAnalysis.VisualBasic.CodeFix.Testing*" />
+
+      <package pattern="Microsoft.CodeAnalysis.CodeRefactoring.Testing*" />
+      <package pattern="Microsoft.CodeAnalysis.CSharp.CodeRefactoring.Testing*" />
+      <package pattern="Microsoft.CodeAnalysis.VisualBasic.CodeRefactoring.Testing*" />
+
+      <package pattern="Microsoft.CodeAnalysis.SourceGenerators.Testing*" />
+      <package pattern="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing*" />
+      <package pattern="Microsoft.CodeAnalysis.VisualBasic.SourceGenerators.Testing*" />
     </packageSource>
   </packageSourceMapping>
 </configuration>
