--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
       run: dotnet build --no-restore --configuration Release /bl:./artifacts/logs/release/build.release.binlog
 
     - name: Test
-      run: dotnet test --no-build --configuration Release
+      run: dotnet test --no-build --configuration Release --collect "Code Coverage;Format=cobertura"
 
     - name: Publish Test Report
       uses: actions/upload-artifact@v4
