--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,15 @@ jobs:
     - name: Test
       run: dotnet test --no-build --configuration Release --settings ./build/targets/tests/test.runsettings
 
-    - name: Publish Test Report
+    - name: Upload *.received.* files
+      uses: actions/upload-artifact@v4
+      if: failure()
+      with:
+        name: verify-test-results
+        path: |
+          **/*.received.*
+
+    - name: Upload Test Report
       uses: actions/upload-artifact@v4
       if: success() || failure()
       with:
@@ -66,13 +74,16 @@ jobs:
         path: "artifacts/TestResults/**/*.trx"
         if-no-files-found: error
 
-    - name: Upload Test Results
-      uses: actions/upload-artifact@v2
-      if: failure()      
+    - name: Upload Code Coverage Report
+      uses: actions/upload-artifact@v4
+      if: success() || failure()
       with:
-        name: verify-test-results
-        path: |
-          **/*.received.*
+        name: .NET Code Coverage Reports (${{ matrix.os }})
+        path: "artifacts/TestResults/coverage/**"
+
+    - name: Publish coverage summary
+      run: cat artifacts/TestResults/coverage/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
+      shell: bash
 
     - name: Upload binlogs
       uses: actions/upload-artifact@v4
