--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,8 +107,10 @@ jobs:
 
     - name: Run DevSkim scanner
       uses: microsoft/DevSkim-Action@v1
+      if: runner.os == 'Linux'
 
     - name: Upload DevSkim scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v2
+      if: runner.os == 'Linux'
       with:
         sarif_file: devskim-results.sarif
