--- a/.editorconfig
+++ b/.editorconfig
@@ -45,6 +45,7 @@ dotnet_style_qualification_for_event = false:silent
 dotnet_style_qualification_for_field = false:silent
 dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_property = false:silent
+dotnet_diagnostic.SA1101.severity = silent # SA1101: Prefix local calls with this
 
 # Language keywords vs BCL types preferences
 dotnet_style_predefined_type_for_locals_parameters_members = true:silent
