--- a/Source/Moq.Analyzers.Test/.editorconfig
+++ b/Source/Moq.Analyzers.Test/.editorconfig
@@ -12,3 +12,7 @@ dotnet_diagnostic.CS1591.severity = suggestion
 
 # CS1712: Type parameter 'type parameter' has no matching typeparam tag in the XML comment on 'type' (but other type parameters do)
 dotnet_diagnostic.CS1712.severity = suggestion
+
+# VSTHRD200: Use "Async" suffix for async methods
+# Just about every test method is async, doesn't provide any real value and clustters up test window
+dotnet_diagnostic.VSTHRD200.severity = none
