Update main.yml to add Codacy upload of Cobertura coverage

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+    env:
+      IS_COVERAGE_ALLOWED: ${{ secrets.CODACY_PROJECT_TOKEN != '' }}
+      IS_MAIN_BRANCH: ${{ github.ref == 'refs/heads/main' }}
+
     steps:
     - uses: actions/checkout@v4
       with:
@@ -105,6 +109,9 @@ jobs:
       with:
         category: "/language:csharp"
 
-    - name: Upload coverage data to codacy
-      run: bash <(curl -Ls https://coverage.codacy.com/get.sh)
-      if: runner.os == 'Linux'
+    - name: Upload coverage data to codacy      
+      if: ${{ runner.os == 'Linux' && env.IS_COVERAGE_ALLOWED == 'true' && env.IS_MASTER_BRANCH == 'true' }}
+      uses: codacy/codacy-coverage-reporter-action@master
+      with:
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        coverage-reports: ${{ github.workspace }}/artifacts/TestResults/coverage/Cobertura.xml
