Update main.yml to add Cobertura report

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,11 @@ jobs:
       run: cat artifacts/TestResults/coverage/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
       shell: bash
 
+    - name: cobertura-report
+      uses: 5monkeys/cobertura-action@v14
+      with:
+        path: artifacts/TestResults/coverage/*.xml
+
     - name: Upload coverage data to Codacy      
       if: ${{ runner.os == 'Linux' && env.IS_COVERAGE_ALLOWED == 'true' && env.IS_MASTER_BRANCH == 'true' }}
       uses: codacy/codacy-coverage-reporter-action@v1.3.0
