Update main.yml to add codacy test coverage (#92)
Updates to build to enable integration with Codacy

- Rename "Publish coverage summary" to "Publish coverage summary to
GitHub" when posting SummaryGithub.md
- Add new step to upload Cobertura code coverage information to Codacy
- Add Codacy coverage and grade badges to README.md

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+    env:
+      IS_COVERAGE_ALLOWED: ${{ secrets.CODACY_PROJECT_TOKEN != '' }}
+
     steps:
     - uses: actions/checkout@v4
       with:
@@ -81,9 +84,16 @@ jobs:
         name: .NET Code Coverage Reports (${{ matrix.os }})
         path: "artifacts/TestResults/coverage/**"
 
-    - name: Publish coverage summary
+    - name: Publish coverage summary to GitHub
       run: cat artifacts/TestResults/coverage/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
       shell: bash
+
+    - name: Upload coverage data to Codacy      
+      if: ${{ runner.os == 'Linux' && env.IS_COVERAGE_ALLOWED == 'true' }}
+      uses: codacy/codacy-coverage-reporter-action@v1.3.0
+      with:
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        coverage-reports: ${{ github.workspace }}/artifacts/TestResults/coverage/Cobertura.xml
 
     - name: Upload binlogs
       uses: actions/upload-artifact@v4
