Enable warnings as errors (#91)
- Updated `.editorconfig` to set policy on some duplicate warnings for
TODO. Borrowed from #89 to make merging easier
- Added suppressions for analyzers that seem to be misfiring. Tracked in
#90
- Updated cases where nullability was incorrect (something could be
passed as null but wasn't, something was marked as nullable but wasn't).
Where possible added asserts so we can catch cases when they arise.
- Removed `<NoWarn>` from `Moq.Analyzers.csproj`
- Added `<TreatWarningsAsErrors>` and `MSBuildTreatWarningsAsErrors`
elements to `CodeAnalysis.props`

--- a/.editorconfig
+++ b/.editorconfig
@@ -407,3 +407,5 @@ dotnet_diagnostic.CA2016.severity = error
 dotnet_diagnostic.S1135.severity = suggestion
 # AV2318: Work-tracking TODO comment should be removed
 dotnet_diagnostic.AV2318.severity = none
+# MA0026: Fix TODO comment
+dotnet_diagnostic.MA0026.severity = none
