Move to src/ and tests/ folders

--- a/tests/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/tests/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -23,7 +23,7 @@
     <PackageReference Include="Verify.Nupkg" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Moq.Analyzers\Moq.Analyzers.csproj" AddPackageAsOutput="true" />
+    <ProjectReference Include="$(RepoRoot)/src/Moq.Analyzers/Moq.Analyzers.csproj" AddPackageAsOutput="true" />
   </ItemGroup>
 
 </Project>
