--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,17 +1,31 @@
 # Add 'build' label to any change in the 'build' directory
 build:
-- build/**/*
+- changed-files:
+  - any-glob-to-any-file: 'build/**/*'
 
 # Add 'dependencies' label to any change in one of the packages files
 dependencies:
-- build/**/Packages.props
-- Directory.Packages.props
+- changed-files:
+  - any-glob-to-any-file: ['build/**/Packages.props', 'Directory.Packages.props']
 
 # Add '.NET' label to any change to a '.cs' file under Moq.Analyzers
 .NET
-- 'src/Moq.Analyzers/**/*.cs'
+- changed-files:
+  - any-glob-to-any-file: ['src/Moq.Analyzers/**/*.cs']
 
 # Add 'documentation' label to any change within the 'docs' directory or any '.md' file
 documentation:
-- docs/**/*
-- '**/*.md'
+- changed-files: 
+  - any-glob-to-any-file: ['docs/**/*', '**/*.md']
+
+# Add 'feature' label to any PR where the head branch name starts with `feature` or has a `feature` section in the name
+feature:
+ - head-branch: ['^feature', 'feature']
+
+ # Add 'bug' label to any PR where the head branch name starts with `bug` or has a `bug` section in the name
+bug:
+ - head-branch: ['^bug', 'bug']
+
+ # Add 'releasable' label to any PR that is opened against the `main` branch
+releasable:
+ - base-branch: 'main'
