--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -8,24 +8,29 @@ dependencies:
 - changed-files:
   - any-glob-to-any-file: ['build/**/Packages.props', 'Directory.Packages.props']
 
-# Add '.NET' label to any change to a '.cs' file under Moq.Analyzers
-.NET
-- changed-files:
-  - any-glob-to-any-file: ['src/Moq.Analyzers/**/*.cs']
-
 # Add 'documentation' label to any change within the 'docs' directory or any '.md' file
 documentation:
 - changed-files: 
-  - any-glob-to-any-file: ['docs/**/*', '**/*.md']
+  - any-glob-to-any-file: ['docs/**', '**/*.md']
 
 # Add 'feature' label to any PR where the head branch name starts with `feature` or has a `feature` section in the name
 feature:
  - head-branch: ['^feature', 'feature']
 
- # Add 'bug' label to any PR where the head branch name starts with `bug` or has a `bug` section in the name
+# Add 'bug' label to any PR where the head branch name starts with `bug` or has a `bug` section in the name
 bug:
  - head-branch: ['^bug', 'bug']
 
- # Add 'releasable' label to any PR that is opened against the `main` branch
+# Add 'releasable' label to any PR that is opened against the `main` branch
 releasable:
  - base-branch: 'main'
+
+# Add 'github_actions' label to any change to one of the GitHub workflows or configuration files
+github_actions:
+- changed-files:
+  - any-glob-to-any-file: ['.github/workflows/*.yml', '.github/dependabot.yml', '.github/labeler.yml']
+
+# Add 'analyzers' label to any change to an analyzer, code fix, or shipping documentation
+analyzers:
+- changed-files:
+  - any-glob-to-any-file: ['src/Moq.Analyzers/AnalyzerReleases.*.md', 'src/Moq.Analyzers/**/*Analyzer.cs', 'src/Moq.Analyzers/**/*CodeFix.cs']
