Map the System.CommandLine.Rendering package to the dotnet5 source

--- a/nuget.config
+++ b/nuget.config
@@ -19,6 +19,9 @@
     <packageSource key="nuget">
       <package pattern="*" />
     </packageSource>
+    <packageSource key="dotnet5">
+      <package pattern="System.CommandLine.Rendering" />
+    </packageSource>
     <packageSource key="dotnet-tools">
       <package pattern="Microsoft.CodeAnalysis.Analyzer.Testing*" />
       <package pattern="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing*" />
