--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <clear />
+    <add key="dotnet5" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json" />
     <!-- dotnet-tools is needed to get newer versions of Microsoft.CodeAnalysis.Testing.* See https://github.com/dotnet/roslyn-sdk/issues/1047 for discussion to publish these to nuget.org. -->
     <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" />
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
@@ -9,6 +10,9 @@
   <packageSourceMapping>
     <packageSource key="nuget">
       <package pattern="*" />
+    </packageSource>
+    <packageSource key="dotnet5">
+      <package pattern="System.CommandLine.Rendering" />
     </packageSource>
     <packageSource key="dotnet-tools">
       <package pattern="Microsoft.CodeAnalysis.Analyzer.Testing*" />
