--- a/tests/Moq.Analyzers.Test/PackageTests.Baseline#manifest.verified.nuspec
+++ b/tests/Moq.Analyzers.Test/PackageTests.Baseline#manifest.verified.nuspec
@@ -12,6 +12,6 @@
     <releaseNotes>A changelog is available at https://github.com/rjmurillo/moq.analyzers/releases</releaseNotes>
     <copyright>2017 Andrey Lipatkin</copyright>
     <tags>moq, tdd, mocking, mocks, unittesting, agile, unittest, mock, test, analyzers</tags>
-    <repository type="git" url="https://github.com/********/moq.analyzers.git" commit="****************************************" />
+    <repository type="git" url="https://github.com/********/moq.analyzers.git" branch="********" commit="****************************************" />
   </metadata>
 </package>
