--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ permissions:
 jobs:
   build:
     strategy:
+      fail-fast: false # Run all OSes, even if one fails, to help narrow down issues that only impact some platforms
       matrix:
         os: [windows-2022, ubuntu-22.04]
 
