Add SquiggleCop to baseline analyzer settings (#166)
Add [SquiggleCop](https://github.com/MattKotsenas/SquiggleCop) to
baseline the analyzers and their configuration. This intends to prevent
accidental changes / regressions to the project, such as #165.

Changes made
- Add `SquiggleCop.Tasks` and wire into the existing `$(PedanticMode)`
to validate baselines
- Add `SquiggleCop.Tool` to support ad-hoc baselining / troubleshooting
- Update `CONTRIBUTING.md` with re-baselining procedure
- Update SDK in `global.json` to latest version and disable rollforward
to support reproducible build
- Update pipelines to upload SARIF files to aid debugging

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ permissions:
 jobs:
   build:
     strategy:
+      fail-fast: false # Run all OSes, even if one fails, to help narrow down issues that only impact some platforms
       matrix:
         os: [windows-2022, ubuntu-22.04]
 
@@ -72,6 +73,13 @@ jobs:
         name: verify-test-results
         path: |
           **/*.received.*
+
+    - name: Upload SARIF files
+      uses: actions/upload-artifact@v4
+      if: success() || failure()
+      with:
+        name: SARIF files (${{ matrix.os }})
+        path: ./artifacts/obj/**/*.sarif
 
     - name: Upload Test Report
       uses: actions/upload-artifact@v4
