--- a/tests/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/tests/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(RepoRoot)/src/Moq.Analyzers/Moq.Analyzers.csproj" AddPackageAsOutput="true" />
+    <ProjectReference Include="..\..\src\Moq.CodeFixes\Moq.CodeFixes.csproj" />
   </ItemGroup>
 
 </Project>
